# trailcam-classifier

./: .gitignore  AGENTS.md  README.md  pyproject.toml  trailcam-classifier.spec
.github/workflows/: ci.yml
src/trailcam_classifier/: __init__.py  confusion_matrix.py  gui.py  import_dataset.py  main.py  train.py  training.py  util.py  viewer.py
tests/: test_import_dataset.py  test_main.py  test_object_detection.py  test_remove_duplicates.py  test_training.py
utils/: remove_duplicates.py  rename_with_exif.py
